adding nav menu without responsive

--- a/index.html
+++ b/index.html
@@ -20,17 +20,45 @@
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
   </head>
   <body>
+    <nav>
+      <ul class="menu">
+        <li class="menu__item menu__item--active">
+          <a href="#">
+            <span class="menu__item-name">About me</span>
+            <span class="menu__item-marker"></span>
+          </a>
+        </li>
+        <li class="menu__item">
+          <a href="#">
+            <span class="menu__item">Projects</span>
+            <span class="menu__item-marker"></span>
+          </a>
+        </li>
+        <li class="menu__item">
+          <a href="#">
+            <span class="menu__item-name">Contact</span>
+            <span class="menu__item-marker"></span>
+          </a>
+        </li>
+        <li class="menu__item">
+          <a href="#">
+            <span class="menu__item-name">Blog</span>
+            <span class="menu__item-marker"></span>
+          </a>
+        </li>
+      </ul>
+    </nav>
     <main>
       <div class="shapes">
-        <img src="./assets/rect1.png" class="shape1">
-        <img src="./assets/shape1.png" class="shape2">
-        <img src="./assets/shape2.png" class="shape3">
-        <img src="./assets/shape1.png" class="shape4">
-        <img src="./assets/shape4.png" class="shape5">
-        <img src="./assets/shape3.png" class="shape6">
-        <img src="./assets/shape5.png" class="shape7">
-        <img src="./assets/shape3.png" class="shape8">
-        <img src="./assets/shape2.png" class="shape9">
+        <img src="./assets/rect1.png" class="shape1" />
+        <img src="./assets/shape1.png" class="shape2" />
+        <img src="./assets/shape2.png" class="shape3" />
+        <img src="./assets/shape1.png" class="shape4" />
+        <img src="./assets/shape4.png" class="shape5" />
+        <img src="./assets/shape3.png" class="shape6" />
+        <img src="./assets/shape5.png" class="shape7" />
+        <img src="./assets/shape3.png" class="shape8" />
+        <img src="./assets/shape2.png" class="shape9" />
       </div>
       <img src="./assets/me.png" alt="mfcoder" class="main__logo" />
       <p class="main__name">JUAN PABLO</p>
