--- a/index.html
+++ b/index.html
@@ -49,27 +49,16 @@
       </ul>
     </nav>
     <main>
-      <div class="shapes">
-        <img src="./assets/rect1.png" class="shape1" />
-        <img src="./assets/shape1.png" class="shape2" />
-        <img src="./assets/shape2.png" class="shape3" />
-        <img src="./assets/shape1.png" class="shape4" />
-        <img src="./assets/shape4.png" class="shape5" />
-        <img src="./assets/shape3.png" class="shape6" />
-        <img src="./assets/shape5.png" class="shape7" />
-        <img src="./assets/shape3.png" class="shape8" />
-        <img src="./assets/shape2.png" class="shape9" />
-      </div>
-      <img src="./assets/me.png" alt="mfcoder" class="main__logo" />
-      <p class="main__name">JUAN PABLO</p>
-      <p class="main__nickname">MF CODER</p>
-      <hr class="main__line" />
-      <h1 class="main__ocupation">Front End Developer</h1>
-      <p class="main__description">
+      <img src="./assets/me.png" alt="mfcoder" class="main__logo no-pointer" />
+      <p class="main__name no-pointer">JUAN PABLO</p>
+      <p class="main__nickname no-pointer">MF CODER</p>
+      <hr class="main__line no-pointer" />
+      <h1 class="main__ocupation no-pointer">Front End Developer</h1>
+      <p class="main__description no-pointer">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. At nesciunt
         nemo quisquam blanditiis? Impedit dolorum mollitia ducimus in sequi.
       </p>
-      <div class="icons">
+      <div class="icons no-pointer">
         <i class="fab fa-html5 icons__html"></i>
         <i class="fab fa-css3-alt icons__css"></i>
         <i class="fab fa-js icons__js"></i>
