--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0,user-scalable=no"
     />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <meta name="author" content="" />
-    <meta name="copyright" content="" />
+    <meta name="description" content="This is the MF's porfolio where you can find more about me and my projects" />
+    <meta name="keywords" content="mfcoder,programming,development,javascript,dev" />
+    <meta name="author" content="Juan Pablo MF" />
+    <meta name="copyright" content="JuanPabloMF2019" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>JUAN PABLO</title>
     <link rel="stylesheet" href="./css/style.css" />
