html code for menu responsive without styles

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0,user-scalable=no"
     />
-    <meta name="description" content="This is the MF's porfolio where you can find more about me and my projects" />
-    <meta name="keywords" content="mfcoder,programming,development,javascript,dev" />
+    <meta
+      name="description"
+      content="This is the MF's porfolio where you can find more about me and my projects"
+    />
+    <meta
+      name="keywords"
+      content="mfcoder,programming,development,javascript,dev"
+    />
     <meta name="author" content="Juan Pablo MF" />
     <meta name="copyright" content="JuanPabloMF2019" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -21,6 +27,34 @@
   </head>
   <body>
     <nav>
+      <!-- responsive menu -->
+      <ul class="menu-responsive">
+        <li class="menu-responsive__item menu-responsive__item--active">
+          <a href="#">
+            <span class="menu-responsive__item-name">About me</span>
+            <span class="menu-responsive__item-underline"></span>
+          </a>
+        </li>
+        <li class="menu-responsive__item">
+          <a href="#">
+            <span class="menu-responsive__item-name">Projects</span>
+            <span class="menu-responsive__item-underline"></span>
+          </a>
+        </li>
+        <li class="menu-responsive__item">
+          <a href="#">
+            <span class="menu-responsive__item-name">Contact</span>
+            <span class="menu-responsive__item-underline"></span>
+          </a>
+        </li>
+        <li class="menu-responsive__item">
+          <a href="#">
+            <span class="menu-responsive__item-name">Blog</span>
+            <span class="menu-responsive__item-underline"></span>
+          </a>
+        </li>
+      </ul>
+      <!-- menu -->
       <ul class="menu">
         <li class="menu__item menu__item--active">
           <a href="#">
