--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
   <body>
     <nav>
       <!-- responsive menu -->
+      <button class="btnmenu">
+        <span class="btnmenu__square1"></span>
+        <span class="btnmenu__square2"></span>
+        <span class="btnmenu__square3"></span>
+      </button>
       <ul class="menu-responsive">
         <li class="menu-responsive__item menu-responsive__item--active">
           <a href="#">
