adding modifier classes

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <nav>
       <!-- responsive menu -->
       <button class="btnmenu">
-        <span class="btnmenu__square btnmenu__square1"></span>
-        <span class="btnmenu__square btnmenu__square2"></span>
-        <span class="btnmenu__square btnmenu__square3"></span>
+        <span class="btnmenu__square btnmenu__square--1"></span>
+        <span class="btnmenu__square btnmenu__square--2"></span>
+        <span class="btnmenu__square btnmenu__square--3"></span>
       </button>
       <ul class="menu-responsive">
         <li class="menu-responsive__item menu-responsive__item--active">
