adding contact section

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <span class="project_commingsoon__text">COMMING SOON</span>
           </div>
           <img
-            src="./img/dailfitylogo.png"
+            src="./assets/dailfitylogo.png"
             class="project__picture"
             alt="dailifity"
           />
@@ -180,7 +180,7 @@
             <span class="project_commingsoon__text">COMMING SOON</span>
           </div>
           <img
-            src="./img/test1.png"
+            src="./assets/gritbills.png"
             class="project__picture"
             alt="grit bills"
           />
@@ -191,7 +191,7 @@
             <span class="project_commingsoon__text">COMMING SOON</span>
           </div>
           <img
-            src="./img/test2.png"
+            src="./assets/englishplatfgorm.png"
             class="project__picture"
             alt="english platform"
           />
@@ -203,8 +203,75 @@
       <h2 class="contact__title" data-aos="fade-in" data-aos-delay="350">
         CONTACT
       </h2>
+      <div
+        class="contact__container"
+        data-aos="zoom-out-up"
+        data-aos-delay="150"
+      >
+        <ul class="contact__iconlist">
+          <li
+            class="contact__iconitem"
+            data-aos="fade-in"
+            data-aos-delay="800"
+            data-aos-offset="0"
+          >
+            <a
+              href="https://twitter.com/_MFcoder_"
+              class="contact__icon contact__icon--twitter"
+              target="_blank"
+            >
+              <i class="fab fa-twitter"></i
+            ></a>
+          </li>
+          <li
+            class="contact__iconitem"
+            data-aos="fade-in"
+            data-aos-delay="600"
+            data-aos-offset="0"
+          >
+            <a
+              href="https://co.linkedin.com/in/juan-pablo-mu%C3%B1oz-alvarez-a9719914b"
+              class="contact__icon contact__icon--linkedin"
+              target="_blank"
+            >
+              <i class="fab fa-linkedin-in"></i
+            ></a>
+          </li>
+          <li
+            class="contact__iconitem"
+            data-aos="fade-in"
+            data-aos-delay="400"
+            data-aos-offset="0"
+          >
+            <a
+              href="https://codepen.io/PabloMF"
+              class="contact__icon contact__icon--codepen"
+              target="_blank"
+              ><i class="fab fa-codepen"></i
+            ></a>
+          </li>
+          <li
+            class="contact__iconitem"
+            data-aos="fade-in"
+            data-aos-delay="200"
+            data-aos-offset="0"
+          >
+            <a
+              href="https://github.com/JPabloMF"
+              class="contact__icon contact__icon--github"
+              target="_blank"
+              ><i class="fab fa-github"></i
+            ></a>
+          </li>
+        </ul>
+        <p class="contact__text">
+          Or email me at
+          <a href="mailto:juanpablo45671@gmail.com" class="contact__email"
+            >juanpablo45671@gmail.com</a
+          >
+        </p>
+      </div>
     </section>
-    <footer></footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./js/script.js"></script>
