modified meta description

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta
       name="description"
-      content="This is the MF's porfolio where you can find more about me and my projects"
+      content="This is my personal porfolio where you can find more about me and my projects"
     />
     <meta
       name="keywords"
