adding about me description

--- a/index.html
+++ b/index.html
@@ -105,8 +105,16 @@
         Front End Developer
       </h1>
       <p class="main__description no-pointer" data-aos="flip-up">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. At nesciunt
-        nemo quisquam blanditiis? Impedit dolorum mollitia ducimus in sequi.
+        👋I'm Juan Pablo a Front End dev 👨‍💻 from Colombia .
+      </p>
+      <p class="main__description no-pointer" data-aos="flip-up">
+        I love being learn new things everyday 🤓📚.
+      </p>
+      <p class="main__description no-pointer" data-aos="flip-up">
+        I love teamwork and teach my knowledges specially about HTML, CSS and JAVASCRIPT things.
+      </p>
+      <p class="main__description no-pointer" data-aos="flip-up">
+        Future game dev 🎮
       </p>
       <div class="icons no-pointer">
         <i
