--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
         👋I'm Juan Pablo a Front End dev 👨‍💻 from Colombia .
       </p>
       <p class="main__description no-pointer" data-aos="flip-up">
-        I love being learn new things everyday 🤓📚.
+        I love learning new things everyday 🤓📚.
       </p>
       <p class="main__description no-pointer" data-aos="flip-up">
-        I love teamwork and teach my knowledges specially about HTML, CSS and JAVASCRIPT things.
+        I enjoy teamwork and teaching my knowledge on HTML, CSS and JAVASCRIPT things.
       </p>
       <p class="main__description no-pointer" data-aos="flip-up">
         Future game dev 🎮
