menu responsive added

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
-    <nav>
+    <button class="btnmenu" id="btnmenu">
+      <span class="btnmenu__square btnmenu__square--1"></span>
+      <span class="btnmenu__square btnmenu__square--2"></span>
+      <span class="btnmenu__square btnmenu__square--3"></span>
+    </button>
+    <nav id="nav">
       <!-- responsive menu -->
-      <button class="btnmenu">
-        <span class="btnmenu__square btnmenu__square--1"></span>
-        <span class="btnmenu__square btnmenu__square--2"></span>
-        <span class="btnmenu__square btnmenu__square--3"></span>
-      </button>
       <ul class="menu-responsive">
         <li class="menu-responsive__item menu-responsive__item--active">
           <a href="#aboutme">
