module pattern js

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
+    <!-- preloader -->
+    <div>
+      <div></div>
+      <div></div>
+    </div>
+
     <button class="btnmenu" id="btnmenu">
       <span class="btnmenu__square btnmenu__square--1"></span>
       <span class="btnmenu__square btnmenu__square--2"></span>
