test preloader added

--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
   </head>
   <body>
     <!-- preloader -->
-    <div>
-      <div></div>
-      <div></div>
+    <div class="preloader" id="preloader">
+      <span class="preloader__text">Loading...</span>
     </div>
 
     <button class="btnmenu" id="btnmenu">
@@ -287,7 +286,9 @@
       </div>
     </section>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/104/three.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./js/script.js"></script>
+    <script src="./js/3dscript.js"></script>
   </body>
 </html>
