fix dailifity url

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
               You'll have three routines during three weeks, working on the most
               important muscles.
             </p>
-            <a href="https://dailfity.now.sh/" class="project__btn">Go to DailiFity</a>
+            <a href="https://dailfity.jpablomf.now.sh/" class="project__btn">Go to DailiFity</a>
           </div>
         </li>
         <li class="projects__item" data-aos="slide-down" data-aos-delay="50">
