provitional remove blog option

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
             <span class="menu-responsive__item-underline"></span>
           </a>
         </li>
-        <li class="menu-responsive__item">
+        <!-- <li class="menu-responsive__item">
           <a href="#">
             <span class="menu-responsive__item-name">Blog</span>
             <span class="menu-responsive__item-underline"></span>
           </a>
-        </li>
+        </li> -->
       </ul>
       <!-- menu -->
       <ul class="menu" id="menu">
@@ -88,12 +88,12 @@
             <span class="menu__item-marker"></span>
           </a>
         </li>
-        <li class="menu__item">
+        <!-- <li class="menu__item">
           <a href="#">
             <span class="menu__item-name">Blog</span>
             <span class="menu__item-marker"></span>
           </a>
-        </li>
+        </li> -->
       </ul>
     </nav>
     <main id="aboutme" class="section">
