--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
         I love learning new things everyday 🤓📚.
       </p>
       <p class="main__description no-pointer" data-aos="flip-up">
-        I enjoy teamwork and teaching my knowledge on HTML, CSS and JAVASCRIPT things.
+        I enjoy teamwork and teaching my knowledge on HTML, CSS and JAVASCRIPT
+        things.
       </p>
       <p class="main__description no-pointer" data-aos="flip-up">
         Future game dev 🎮
@@ -170,11 +171,27 @@
             <span class="project_commingsoon__text">COMMING SOON</span>
           </div>
           <img
-            src="./assets/dailfitylogo.png"
+            src="./assets/cryptocurrencies.png"
             class="project__picture"
             alt="dailifity"
           />
-          <h3 class="no-margin">DailiFity</h3>
+          <h3 class="no-margin">cryptocurrencies</h3>
+          <div class="project__information">
+            <h3 class="project__title project__title--dailifity">
+              cryptocurrencies
+            </h3>
+            <p class="project__description">
+              cryptocurrencies it's a platform that show you some of the most
+              famous crypto currencies and their values.
+            </p>
+            <a
+              href="https://cryptocurrencies.vercel.app/"
+              target="_blank"
+              class="project__btn"
+              >Go to Cryptocurrencies</a
+            >
+          </div>
+          <!-- <h3 class="no-margin">DailiFity</h3>
           <div class="project__information">
             <h3 class="project__title project__title--dailifity">Dailifity</h3>
             <p class="project__description">
@@ -186,7 +203,7 @@
               important muscles.
             </p>
             <a href="https://dailfity.jpablomf.now.sh/" target="_blank" class="project__btn">Go to DailiFity</a>
-          </div>
+          </div> -->
         </li>
         <li class="projects__item" data-aos="slide-down" data-aos-delay="50">
           <div class="project__commingsoon">
