--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <span class="project_commingsoon__text">COMMING SOON</span>
           </div>
           <img
-            src="./assets/cryptocurrencies.png"
+            src="./assets/cryptocurrencies.PNG"
             class="project__picture"
             alt="dailifity"
           />
@@ -192,7 +192,7 @@
             >
           </div>
           <!-- <h3 class="no-margin">DailiFity</h3>
-          <div class="project__information">
+          <div class="project__information">.
             <h3 class="project__title project__title--dailifity">Dailifity</h3>
             <p class="project__description">
               DailiFity it's a platform that You can use to have an order in
