--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
         PROJECTS
       </h2>
       <ul class="projects__list no-pointer">
+        <!-- Cryptocurrencies -->
         <li class="projects__item" data-aos="slide-right" data-aos-delay="50">
           <div class="project__commingsoon no-show">
             <span class="project_commingsoon__text">COMMING SOON</span>
@@ -191,21 +192,69 @@
               >Go to Cryptocurrencies</a
             >
           </div>
-          <!-- <h3 class="no-margin">DailiFity</h3>
-          <div class="project__information">.
-            <h3 class="project__title project__title--dailifity">Dailifity</h3>
-            <p class="project__description">
-              DailiFity it's a platform that You can use to have an order in
-              your training routin.
-            </p>
-            <p class="project__description">
-              You'll have three routines during three weeks, working on the most
-              important muscles.
-            </p>
-            <a href="https://dailfity.jpablomf.now.sh/" target="_blank" class="project__btn">Go to DailiFity</a>
-          </div> -->
         </li>
-        <li class="projects__item" data-aos="slide-down" data-aos-delay="50">
+        <!-- Blog -->
+        <li class="projects__item" data-aos="slide-right" data-aos-delay="50">
+          <div class="project__commingsoon no-show">
+            <span class="project_commingsoon__text">COMMING SOON</span>
+          </div>
+          <img
+            src="./assets/blog.PNG"
+            class="project__picture"
+            alt="dailifity"
+          />
+          <h3 class="no-margin">
+            MF'S Blog <span class="project__wip">WIP</span>
+          </h3>
+          <div class="project__information">
+            <h3 class="project__title project__title--dailifity">
+              MF'S Blog
+            </h3>
+            <p class="project__description">
+              MF's blog it's my personal blog where I share posts about tech
+              topics and English grammar.
+            </p>
+            <a
+              href="https://mfcoderblog.vercel.app/Home"
+              target="_blank"
+              class="project__btn"
+              >Go to MF'S Blog</a
+            >
+          </div>
+        </li>
+        <!-- miner light -->
+        <li class="projects__item" data-aos="slide-right" data-aos-delay="50">
+          <div class="project__commingsoon no-show">
+            <span class="project_commingsoon__text">COMMING SOON</span>
+          </div>
+          <!-- <img
+            src="./assets/cryptocurrencies.PNG"
+            class="project__picture"
+            alt="dailifity"
+          /> -->
+          <video width="400" height="250" loop autoplay>
+            <source src="./assets/minerlight1.mp4" type="video/mp4" />
+            Your browser does not support the video tag.
+          </video>
+          <h3 class="no-margin">
+            Miner light <span class="project__wip">WIP</span>
+          </h3>
+          <div class="project__information">
+            <h3 class="project__title project__title--dailifity">
+              Miner light
+            </h3>
+            <p class="project__description">
+              Miner light it's my first game developed using Godot and aseprite.
+            </p>
+            <a
+              href="https://jpablomf.github.io/html-godot-export/"
+              target="_blank"
+              class="project__btn"
+              >Go to Miner light</a
+            >
+          </div>
+        </li>
+        <!-- <li class="projects__item" data-aos="slide-down" data-aos-delay="50">
           <div class="project__commingsoon">
             <span class="project_commingsoon__text">COMMING SOON</span>
           </div>
@@ -226,7 +275,7 @@
             alt="english platform"
           />
           <h3 class="no-margin">English Platform</h3>
-        </li>
+        </li> -->
       </ul>
     </section>
     <section id="contact" class="section contact">
