amiibo project and visual improvements

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </li> -->
       </ul>
       <!-- menu -->
-      <ul class="menu" id="menu">
+      <!-- <ul class="menu" id="menu">
         <li
           class="menu__item menu__item--active"
           onclick="selectItem('aboutme')"
@@ -94,7 +94,7 @@
             <span class="menu__item-marker"></span>
           </a>
         </li> -->
-      </ul>
+      </ul> -->
     </nav>
     <main id="aboutme" class="section">
       <img
@@ -190,6 +190,32 @@
               target="_blank"
               class="project__btn"
               >Go to Cryptocurrencies</a
+            >
+          </div>
+        </li>
+        <!-- amiibo -->
+        <li class="projects__item" data-aos="slide-right" data-aos-delay="50">
+          <div class="project__commingsoon no-show">
+            <span class="project_commingsoon__text">COMMING SOON</span>
+          </div>
+          <img
+            src="./assets/amiibo.png"
+            class="project__picture"
+            alt="dailifity"
+          />
+          <h3 class="no-margin">amiibo</h3>
+          <div class="project__information">
+            <h3 class="project__title project__title--dailifity">
+              amiibo
+            </h3>
+            <p class="project__description">
+              Here you can search for your favorite Nintendo amiibo.
+            </p>
+            <a
+              href="https://nintento-amiibo.vercel.app/"
+              target="_blank"
+              class="project__btn"
+              >Go to Amiibo</a
             >
           </div>
         </li>
