update miner light link

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
               Miner light it's my first game developed using Godot and aseprite.
             </p>
             <a
-              href="https://jpablomf.github.io/html-godot-export/"
+              href="https://jpablomf.github.io/godot-minerlight1.0/"
               target="_blank"
               class="project__btn"
               >Go to Miner light</a
