--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             Your browser does not support the video tag.
           </video>
           <h3 class="no-margin">
-            Miner light <span class="project__wip">WIP</span>
+            Miner light
           </h3>
           <div class="project__information">
             <h3 class="project__title project__title--dailifity">
@@ -277,6 +277,38 @@
               target="_blank"
               class="project__btn"
               >Go to Miner light</a
+            >
+          </div>
+        </li>
+        <!-- miner light 1.1 -->
+        <li class="projects__item" data-aos="slide-right" data-aos-delay="50">
+          <div class="project__commingsoon no-show">
+            <span class="project_commingsoon__text">COMMING SOON</span>
+          </div>
+          <!-- <img
+            src="./assets/cryptocurrencies.PNG"
+            class="project__picture"
+            alt="dailifity"
+          /> -->
+          <video width="400" height="250" loop autoplay>
+            <source src="./assets/minerlight1.1.mp4" type="video/mp4" />
+            Your browser does not support the video tag.
+          </video>
+          <h3 class="no-margin">
+            Miner light 1.1 <span class="project__wip">WIP</span>
+          </h3>
+          <div class="project__information">
+            <h3 class="project__title project__title--dailifity">
+              Miner light 1.1
+            </h3>
+            <p class="project__description">
+              Miner light has some visual and mechanic improvements from miner light 1.0.
+            </p>
+            <a
+              href="https://jpablomf.github.io/html-minerlight1.1/"
+              target="_blank"
+              class="project__btn"
+              >Go to Miner light 1.0</a
             >
           </div>
         </li>
