--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <span class="project_commingsoon__text">COMMING SOON</span>
           </div>
           <img
-            src="./assets/blog.PNG"
+            src="./assets/blog2.PNG"
             class="project__picture"
             alt="dailifity"
           />
@@ -241,7 +241,7 @@
               topics and English grammar.
             </p>
             <a
-              href="https://mfcoderblog.vercel.app/Home"
+              href="https://mfblog.netlify.app/"
               target="_blank"
               class="project__btn"
               >Go to MF'S Blog</a
