fix png extension

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <span class="project_commingsoon__text">COMMING SOON</span>
           </div>
           <img
-            src="./assets/blog2.PNG"
+            src="./assets/blog2.png"
             class="project__picture"
             alt="dailifity"
           />
